--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTE1ODAwNDcxMDk4OTYzOTgzMg.GsFgO5.FknWrGyK8ALuhix97ywYIY4wjFbRxDT1cQyshc
+DISCORD_TOKEN=MTE1ODAwNDcxMDk4OTYzOTgzMg.GJaMYA.Zk7dLqrv53ANToyL8fp3hn9sV9EIcEQDR-IfIE
