--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTE1ODAwNDcxMDk4OTYzOTgzMg.GJaMYA.Zk7dLqrv53ANToyL8fp3hn9sV9EIcEQDR-IfIE
+DISCORD_TOKEN=MTE1ODAwNDcxMDk4OTYzOTgzMg.Gfo-pd.sALdQfKL2huVK-zbi1pBsH6yGwohlO089uFpfs
