--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN=MTE1ODAwNDcxMDk4OTYzOTgzMg.Gfo-pd.sALdQfKL2huVK-zbi1pBsH6yGwohlO089uFpfs
+DISCORD_TOKEN=MTE1ODAwNDcxMDk4OTYzOTgzMg.GV8A7m._VeJ6gAYsE9pEkWvpWVpe-90zj66ZEOzXHIvGc
